<resources>
    <string name="app_name">commerce</string>
    <string name="RightAdress">The Right Adress\nFor Shopping\nAnyDay</string>
    <string name="qulity">It is now very easy to reach the\nbest quality among the\nproducts on the internet!</string>
    <string name="kleine">Kleine.</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="Register">REGISTER</string>
    <string name="registerDetails"> Do you have an account? log in</string>
    <string name="letsRegister">Let\'s Register</string>
    <string name="cancel">cancel</string>
    <string name="send">send</string>
    <string name="reset_password">Reset Password</string>
    <string name="we_will_send_you_the_password_reset_link_to_your_email">We will send you the password reset link to your email</string>
    <string name="best_deals">Best deals</string>
    <string name="best_products">Best Products</string>
    <string name="scotch_premium">Scotch Premium</string>
    <string name="_1600">$1600</string>
    <string name="add_to_cart">Add to cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lofcoding">Lofcoding</string>
    <string name="s">S</string>
    <string name="total">Total</string>
    <string name="_150">$150</string>
    <string name="my_cart">My Cart</string>
    <string name="address_location_ex_home">Address location Ex: Home</string>
    <string name="full_name">Full Name</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="phone">Phone</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="addresses">Addresses</string>
    <string name="my_account">My account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="forgot_change_password">Forgot/Change password</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="product_general_information">Product_general_information</string>
    <string name="product_name">Product name</string>
    <string name="product_category">Product category</string>
    <string name="product_description_optional">product_description - optional</string>
    <string name="product_price">Product Price</string>
    <string name="offer_percentage_optional">offer_percentage - optional</string>
    <string name="product_details">Product_details</string>
    <string name="sizes_optional_use_between_each_new_size">sizes - optional\n</string>
    <string name="product_images">Product images</string>
    <string name="product_colors">Product colors</string>
    <string name="search_any_product">Search any product.....</string>
    <string name="created">Created by Jjombwe Nathan</string>
</resources>