<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/closeAdmin"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_close"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ImageView>

        <TextView
            android:id="@+id/userView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="236dp"
            android:layout_marginTop="20dp"
            android:text="view user"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/closeAdmin"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/productsInfo"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/productsInfo"
            app:layout_constraintVertical_bias="0.612" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/productsInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="90dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="PRODUCTS INFORMATION"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/product_name"
                android:minHeight="48dp"
                android:textColorHint="#8D6E63"
                android:autofillHints="" />


            <EditText
                android:id="@+id/edCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/product_category"
                android:minHeight="48dp"
                android:textColorHint="#8D6E63" />

            <EditText
                android:id="@+id/edDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/product_description_optional"
                android:minHeight="48dp"
                android:textColorHint="#8D6E63" />

            <EditText
                android:id="@+id/edPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_price"
                android:inputType="number"
                android:minHeight="48dp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/offerPercentage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/offer_percentage_optional"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:textColorHint="#8D6E63"
                android:autofillHints="" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@id/productsInfo"
            app:layout_constraintStart_toStartOf="@id/productsInfo"
            app:layout_constraintTop_toBottomOf="@id/productsInfo">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_details"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edSizes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/sizes_optional_use_between_each_new_size"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#8D6E63" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonColorPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/g_blue"
                    android:text="@string/product_colors"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvSelectedColors"
                    android:layout_width="228dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="@color/g_blue"
                    android:gravity="center"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonImagesPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/g_blue"
                    android:text="@string/product_images"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvSelectedImages"
                    android:layout_width="219dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:gravity="center"
                    android:textSize="14sp" />
            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/saveProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Save"
            android:backgroundTint="@color/g_blue"
            app:layout_constraintBottom_toTopOf="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.526" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>