<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/blury_background"
        android:scaleType="centerCrop"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tvAppName"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="32dp"
            android:drawableStart="@drawable/ic_kleine_shape"
            android:drawablePadding="6dp"
            android:text="Kleine."
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLetsLogin"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/letsRegister"
            android:textAlignment="center"
            android:textSize="35sp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/tvAppName" />

        <TextView
            android:id="@+id/tvDontHaveAccount"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/registerDetails"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/tvLetsLogin" />

        <EditText
            android:id="@+id/edLastNameRegister"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittextHeight"
            android:layout_marginTop="15dp"
            android:hint="@string/LastName"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@+id/edFirstNameRegister" />

        <EditText
            android:id="@+id/edFirstNameRegister"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittextHeight"
            android:layout_marginTop="15dp"
            android:hint="@string/FirstName"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@+id/tvDontHaveAccount" />

        <EditText
            android:id="@+id/edEmailRegister"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittextHeight"
            android:layout_marginTop="15dp"
            android:hint="Email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@+id/edLastNameRegister" />

        <EditText
            android:id="@+id/edPasswordRegister"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittextHeight"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            app:layout_constraintTop_toBottomOf="@id/edEmailRegister"
            style="@style/editText"
            android:hint="Password"
            android:inputType="textPassword"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/tvForgotPasswordLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h2"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/edPasswordRegister"
            android:textAlignment="center"
            android:gravity="center"
            android:text="Forgot password"
            android:textColor="@color/black"/>

        <ImageView
            android:id="@+id/facebookLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/buttonRegisterRegister"
            android:src="@drawable/facebook_login"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Facebook"
            app:layout_constraintStart_toStartOf="@id/facebookLogin"
            app:layout_constraintTop_toTopOf="@id/facebookLogin"
            app:layout_constraintBottom_toBottomOf="@id/facebookLogin"
            app:layout_constraintEnd_toEndOf="@id/facebookLogin"/>

        <ImageView
            android:id="@+id/googleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            app:layout_constraintTop_toBottomOf="@id/buttonRegisterRegister"
            android:src="@drawable/google_login"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Google"
            app:layout_constraintStart_toStartOf="@id/googleLogin"
            app:layout_constraintTop_toTopOf="@id/googleLogin"
            app:layout_constraintBottom_toBottomOf="@id/googleLogin"
            app:layout_constraintEnd_toEndOf="@id/googleLogin"/>

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/buttonRegisterRegister"
            style="@style/blueButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/mediumButtonHeight"
            android:layout_marginTop="15dp"
            android:text="@string/Register"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/tvForgotPasswordLogin"
            app:spinning_bar_color="@color/white" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLoginLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.09
" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLoginRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.91" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>